applis/hello-app/manifests/base/workload.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v9a
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app-v9a
        imagePullPolicy: IfNotPresent
        image: registry.symphorines.home/chris7444/hello-app:short-v9.2
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v9b
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app-v9b
        imagePullPolicy: IfNotPresent
        image: registry.symphorines.home/chris7444/hello-app:short-v9.2
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
#  type: LoadBalancer
#  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
