applis/hello-app/manifests/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
spec:
  tls:
  - hosts:
    - hello-app.example.com
    secretName: apps-tls-secret
  rules:
  - host: hello-app.example.com
    http:
      paths:
      - backend:
          service:
            name: hello-app
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
